# fsg

./: README.md
android/fsg/: CMakeLists.txt  build.gradle
android/fsg/src/main/: AndroidManifest.xml
android/fsg/src/main/cpp/: SimulationOSG.cpp  SimulationOSG.h  simNativeLib.cpp
android/fsg/src/main/java/pl/marekcel/fsg/: ActivityBase.java  ActivityCampaign.java  ActivityChooseScenery.java  ActivityChooseUnit.java  ActivityDownload.java  ActivityEncyclopedia.java  ActivityHome.java  ActivityInterstitial.java  ActivityMain.java  ActivityMission.java  ActivityQuickAction.java  ActivitySettings.java  ActivitySimulation.java  ActivityTest.java  ActivityUnitEntry.java  AdapterScenery.java  AdapterSkins.java  AdapterUnits.java  Campaign.java  CommonData.java  Controls.java  ControlsGamepad.java  ControlsSensors.java  DataPath.java  DialogAskYesNo.java  ExpansionFile.java  FragmentHeader.java  FragmentSettings.java  Languages.java  Mission.java  Scenery.java  ServiceDownloader.java  Settings.java  SimNativeLib.java  Simulation.java  Text.java  Units.java  ViewEGL.java  ViewSimulation.java  ViewUnitEntry.java
android/fsg/src/main/res/anim/: scale_dn.xml  scale_up.xml
android/fsg/src/main/res/drawable/: fsg_border.xml  fsg_button.xml  fsg_button_color.xml  fsg_highlight.xml  ic_nav_back.xml  ic_nav_back_default.xml  ic_nav_back_focused.xml  ic_nav_back_pressed.xml  ic_nav_conf.xml  ic_nav_conf_default.xml  ic_nav_conf_focused.xml  ic_nav_conf_pressed.xml  ic_nav_exit.xml  ic_nav_exit_default.xml  ic_nav_exit_focused.xml  ic_nav_exit_pressed.xml  ic_nav_test.xml  ic_nav_test_focused.xml
android/fsg/src/main/res/layout/: activity_campaign.xml  activity_choose_scenery.xml  activity_choose_unit.xml  activity_download.xml  activity_encyclopedia.xml  activity_home.xml  activity_mission.xml  activity_quick_action.xml  activity_settings.xml  activity_simulation.xml  activity_test.xml  activity_unit_entry.xml  fragment_header.xml  item_campaign.xml  item_encyclopedia.xml  item_livery.xml  item_scenery.xml  item_unit.xml
android/fsg/src/main/res/values/: colors.xml  dimens.xml  strings.xml  styles.xml
android/fsg/src/main/res/values-pl/: strings.xml
android/fsg/src/main/res/xml/: settings.xml
desktop/: defs.h  fsg.pro  fsg.qrc  fsg.rc  main.cpp
desktop/gui/: DialogAction.cpp  DialogAction.h  DialogCtrl.cpp  DialogCtrl.h  DialogData.cpp  DialogData.h  DialogData.ui  DialogQuickAction.cpp  DialogQuickAction.h  DialogQuickAction.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  Mission.cpp  Mission.h  Scenery.cpp  Scenery.h  Units.cpp  Units.h  WidgetCGI.cpp  WidgetCGI.h  WidgetCGI_KeyHandler.cpp  WidgetCampaign.cpp  WidgetCampaign.h  WidgetCampaign.ui  gui.pri
desktop/hid/: hid_Assignment.h  hid_Joysticks.cpp  hid_Joysticks.h  hid_Manager.cpp  hid_Manager.h
fotp/data/: captions.xml  scenery.xml  translations.xml  units.xml
fotp/data/entities/: a5m.osgb  a5m.xml  a5m_ijn_1941.rgb  a6m.osgb  a6m.xml  a6m_ijn_1941.rgb  a6m_ijn_1943.rgb  agano.osgb  agano.xml  anm30.osgb  anm59.osgb  at6.osgb  at6.xml  at6_usaaf_1941.rgb  b24.osgb  b24.xml  b24_usaaf_1943_308bg.rgb  b25.osgb  b25.xml  b5n.osgb  b5n.xml  b5n_ijn_1941.rgb  b5n_ijn_1941_soryu.rgb  balloon.osgb  d3a.osgb  d3a.xml  d4y.osgb  (+93 more)
fpa/data/: languages.xml  scenery.xml  units.xml
sim/: sim.pri  sim_Base.h  sim_Captions.cpp  sim_Captions.h  sim_Creator.cpp  sim_Creator.h  sim_Data.h  sim_Defs.h  sim_Elevation.cpp  sim_Elevation.h  sim_Languages.cpp  sim_Languages.h  sim_ListScenery.cpp  sim_ListScenery.h  sim_ListUnits.cpp  sim_ListUnits.h  sim_Manager.cpp  sim_Manager.h  sim_Ownship.cpp  sim_Ownship.h  sim_Route.cpp  sim_Route.h  sim_Simulation.cpp  sim_Simulation.h  sim_Statistics.cpp  sim_Statistics.h  sim_Target.h  sim_Types.h
sim/cgi/: sim_Camera.cpp  sim_Camera.h  sim_Color.cpp  sim_Color.h  sim_Effects.cpp  sim_Effects.h  sim_FindNode.cpp  sim_FindNode.h  sim_FogScene.cpp  sim_FogScene.h  sim_Fonts.cpp  sim_Fonts.h  sim_Gates.cpp  sim_Gates.h  sim_Geometry.cpp  sim_Geometry.h  sim_HUD.cpp  sim_HUD.h  sim_ManipulatorOrbit.cpp  sim_ManipulatorOrbit.h  sim_ManipulatorShift.cpp  sim_ManipulatorShift.h  sim_ManipulatorWorld.cpp  sim_ManipulatorWorld.h  sim_Models.cpp  sim_Models.h  sim_Module.cpp  sim_Module.h  sim_OTW.cpp  sim_OTW.h  sim_Scenery.cpp  sim_Scenery.h  sim_SkyDome.cpp  sim_SkyDome.h  sim_SplashScreen.cpp  sim_SplashScreen.h  sim_Textures.cpp  sim_Textures.h  sim_UnitViewer.cpp  sim_UnitViewer.h
sim/entities/: sim_Aircraft.cpp  sim_Aircraft.h  sim_Balloon.cpp  sim_Balloon.h  sim_Bomb.cpp  sim_Bomb.h  sim_Bomber.cpp  sim_Bomber.h  sim_BomberDive.cpp  sim_BomberDive.h  sim_BomberLevel.cpp  sim_BomberLevel.h  sim_BomberTorpedo.cpp  sim_BomberTorpedo.h  sim_Building.cpp  sim_Building.h  sim_Bullet.cpp  sim_Bullet.h  sim_Entities.cpp  sim_Entities.h  sim_Entity.cpp  sim_Entity.h  sim_Explosion.cpp  sim_Explosion.h  sim_Fighter.cpp  sim_Fighter.h  sim_Flak.cpp  sim_Flak.h  sim_Group.cpp  sim_Group.h  sim_Gunner.cpp  sim_Gunner.h  sim_Kamikaze.cpp  sim_Kamikaze.h  sim_Munition.cpp  sim_Munition.h  sim_Torpedo.cpp  sim_Torpedo.h  sim_Tracer.cpp  sim_Tracer.h  (+18 more)
sim/missions/: sim_Mission.cpp  sim_Mission.h  sim_Objective.cpp  sim_Objective.h  sim_ObjectiveAirspeed.cpp  sim_ObjectiveAirspeed.h  sim_ObjectiveAltitude.cpp  sim_ObjectiveAltitude.h  sim_ObjectiveDefend.cpp  sim_ObjectiveDefend.h  sim_ObjectiveDestroy.cpp  sim_ObjectiveDestroy.h  sim_ObjectiveDistance.cpp  sim_ObjectiveDistance.h  sim_ObjectiveHeading.cpp  sim_ObjectiveHeading.h  sim_ObjectiveTimeout.cpp  sim_ObjectiveTimeout.h  sim_ObjectiveWaypoint.cpp  sim_ObjectiveWaypoint.h  sim_Stage.cpp  sim_Stage.h
sim/sfx/: sim_BufferQueuePlayer.cpp  sim_BufferQueuePlayer.h  sim_EngineOpenSLES.cpp  sim_EngineOpenSLES.h  sim_SFX.cpp  sim_SFX.h
sim/utils/: sim_Angles.cpp  sim_Angles.h  sim_Convert.h  sim_Inertia.h  sim_Misc.cpp  sim_Misc.h  sim_PID.cpp  sim_PID.h  sim_Random.cpp  sim_Random.h  sim_Singleton.h  sim_String.cpp  sim_String.h  sim_Text.cpp  sim_Text.h  sim_XmlDoc.cpp  sim_XmlDoc.h  sim_XmlNode.cpp  sim_XmlNode.h  sim_XmlUtils.cpp  sim_XmlUtils.h
(+196 files in other folders)
